# recipe-parser-group10

./: .gitignore  README.md  README.txt  allowed_questions.txt  environment.yml  pyproject.toml
backend/: README.md  api.py
experiments/: scraper_experiments.ipynb
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
src/: LLM_based_qa.py  chatbot.py  ground_truth.json  ingredients_parser.py  methods_parser.py  parser.py  scraper.py  steps_parser.py  tools_parser.py
src/helper_files/: ground_truth.json  method_keywords.json  procedures.json  tools_keywords.json  unicode_fractions.json  units_map.json  usages.json
src/prompts/: LLM_based_qa_prompt.txt  descriptors_prompt.txt  ingredients_names_prompt.txt  measurement_units_prompt.txt  methods_prompt.txt  parameter_clarification_procedure_prompt.txt  preparations_prompt.txt  prompt_part2.txt  qa_prompt.txt  quantities_prompt.txt  tools_prompt.txt
tests/: test_scraper.py
