[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project]
name = "recipe-parser"
version = "0.5"
authors = [
    { name = "Ahmed Alzahrani" },
    { name = "Ameesha Saxena" },
    { name = "Maxwell Chen" },
    { name = "Suhaib Aden" }
]
